# nyt-times

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6c3ce1ce0ade_feat_time_and_player_models.py
e2e/: e2e_test.py
scripts/: docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  e2e.sh  test.sh
src/: bind.py  constants.py  model.py  settings.py
src/query/: winner.sql
test/: test_model.py
test/fixtures/: __init__.py
