[tool.poetry]
name = "example"
version = "0.1.0"
description = "starting point for web app"
authors = ["Allen Lawrence"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
alembic = "^1.0"
sanic = "^19.6"
gunicorn = "^19.9"
psycopg2-binary = "^2.8"
sanic-openapi = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
requests = "^2.22"
ipython = "^7.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
